# bignumber

./: .travis.yml  CMakeLists.txt  README.md  TODO  a.out  addition.h  billion.cpp  conversion.cpp  conversion.h  main.cpp
include/: bignumber.h  number.h  numberconversion.h  sector.h  stringconversion.h
src/: bignumber.h  number.cpp  number.h  numberconversion.cpp  numberconversion.h  stringconversion.cpp  stringconversion.h
test/: billion.cpp  conversionTest.cpp  main.cpp  mul.cpp  power2.cpp  power2performance.cpp  verification.cpp
